# vsepp_tensorflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: constants.py  datasets.py  evaluators.py  inference.py  loaders.py  models.py  train.py
