[tool.poetry]
name = "vsepp"
version = "0.1.0"
description = ""
authors = ["gorjanradevski <gorjanradevski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^1.14"
tensorflow_hub = "^0.5.0"
"ruamel.yaml" = "^0.16.0"
tqdm = "^4.32"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
